<resources>
    <string name="app_name">Gerenciador De Tarefas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gerenciador_titulo">Gerenciador De Tarefas</string>
    <string name="gerenciador_categorias">Categorias</string>
    <string name="category1">Trabalho</string>
    <string name="category2">Estudo</string>
    <string name="category3">Personal</string>
    <string name="category4">Outro</string>
    <string name="ListTasks">Lista de Tarefas</string>
    <string name="dialog_add_task">Adicionar tarefa</string>
</resources>