<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A972F8"
    android:padding="14dp"
    tools:context=".fragments.GerenciadorDeTarefasFragment">

    <TextView
        android:id="@+id/tvTituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/gerenciador_titulo"
        android:textAllCaps="true"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvCategorys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/gerenciador_categorias"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloApp" />

    <LinearLayout
        android:id="@+id/layoutCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCategorys">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCategory1"
            android:layout_width="86dp"
            android:layout_height="45dp"
            android:layout_margin="4dp"
            app:cardBackgroundColor="#4CAF50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:text="@string/category1"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="#FF5722" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCategory2"
            android:layout_width="86dp"
            android:layout_height="45dp"
            android:layout_margin="4dp"
            app:cardBackgroundColor="#4CAF50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:text="@string/category2"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="#00BCD4" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCategory3"
            android:layout_width="86dp"
            android:layout_height="45dp"
            android:layout_margin="4dp"
            app:cardBackgroundColor="#4CAF50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:text="@string/category3"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="#FFEB3B" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCategory4"
            android:layout_width="86dp"
            android:layout_height="45dp"
            android:layout_margin="4dp"
            app:cardBackgroundColor="#4CAF50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:text="@string/category4"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="#9C27B0" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/tvituloListTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutCategory"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="35dp"
        android:text="@string/ListTasks"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/layoutList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvituloListTasks"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tarefa1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:text="Estudar Kotlin"
            android:textColor="#222020"
            android:textStyle="normal"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tarefa2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:text="Comprar verduras"
            android:textColor="#222020"
            android:textStyle="normal"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tarefa3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:text="Enviar relatório via E-mail para meu superior"
            android:textColor="#222020"
            android:textStyle="normal"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tarefa4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:text="Entregar Projeto até dia 03 de novembro"
            android:textColor="#222020"
            android:textStyle="normal"
            android:textSize="14sp"/>
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_addTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_fab_add"
        android:backgroundTint="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>